<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F3FB"
    tools:context=".SignInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">


                <TextView
                    android:id="@+id/headerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/signInText"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/firstNameTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="190dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/NationalIdText"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/idSignIn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="108dp"
                    android:layout_marginEnd="40dp"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.47"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButtonEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_blue"
                        android:text="                    موظف"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/radioGroup"
                        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

                    <RadioButton
                        android:id="@+id/radioButtonCustomer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/dark_blue"
                        android:checked="true"
                        android:text="@string/customerText"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

                </RadioGroup>

                <EditText
                    android:id="@+id/idSignIn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableLeft="@drawable/ic_baseline_person"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="#8c8c8c"
                    android:textDirection="rtl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameTextview"
                    tools:ignore="Autofill,LabelFor,RtlHardcoded" />

                <TextView
                    android:id="@+id/header2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/yourAccountText"
                    android:textColor="@color/dark_blue"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

                <TextView
                    android:id="@+id/passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/passwordText"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/idSignIn" />

                <EditText
                    android:id="@+id/passwordSignIn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableLeft="@drawable/ic_baseline_lock_open"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#8c8c8c"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
                    tools:ignore="Autofill,LabelFor,RtlHardcoded" />

                <CheckBox
                    android:id="@+id/checkBoxShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:buttonTint="@color/dark_blue"
                    android:layoutDirection="locale"
                    android:text="@string/showPasswordText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordSignIn" />

                <TextView
                    android:id="@+id/personNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/dontHaveAnAccountText"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxShowPassword" />

                <TextView
                    android:id="@+id/signUpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/signUpText"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/personNameTextView"
                    app:layout_constraintTop_toTopOf="@+id/personNameTextView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="302dp"
                    android:layout_height="269dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/signin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/personNameTextView"
                    tools:ignore="ContentDescription" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_background"
        android:text="@string/signInTExt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>